--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.414.0",
     "vue": "^3.4.31",
     "vue-router": "^4.4.0"
   },
